--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
-<html><body>You are being <a href="https://raw.github.com/github/gitignore/master/C.gitignore">redirected</a>.</body></html>
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Libraries
+*.lib
+*.a
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
